// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Applications Render applications with emptyState 1`] = `
<section
  class="pf-l-page-header pf-c-page-header pf-l-page__main-section pf-c-page__main-section pf-m-light"
  widget-type="InsightsPageHeader"
>
  <h1
    class="pf-c-title pf-m-2xl"
    widget-type="InsightsPageHeaderTitle"
  >
     Testapp 
  </h1>
</section>
`;

exports[`Applications Render applications with mockState 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(Applications)
    match={
      Object {
        "params": Object {
          "id": "testapp",
        },
      }
    }
  >
    <Applications
      appsConfig={
        Object {
          "testapp": Object {
            "frontend": Object {
              "title": "Test app",
            },
          },
        }
      }
      configLoaded={true}
      getConfig={[Function]}
      getSchema={[Function]}
      loaded={true}
      match={
        Object {
          "params": Object {
            "id": "testapp",
          },
        }
      }
      saveValues={[Function]}
      schema={
        Array [
          Object {
            "fields": Array [
              Object {
                "component": "text-field",
                "initialValue": "",
                "isRequired": true,
                "label": "Email",
                "name": "email",
                "validate": Array [
                  Object {
                    "type": "required",
                  },
                ],
              },
              Object {
                "component": "switch",
                "initialValue": false,
                "label": "Hide Satellite systems",
                "name": "hideSatelliteSystems",
                "type": "checkbox",
              },
            ],
          },
        ]
      }
    >
      <PageHeader>
        <section
          className="pf-l-page-header pf-c-page-header pf-l-page__main-section pf-c-page__main-section pf-m-light"
          widget-type="InsightsPageHeader"
        >
          <PageHeaderTitle
            title="Test App"
          >
            <Title
              className=""
              headingLevel="h1"
              size="2xl"
              widget-type="InsightsPageHeaderTitle"
            >
              <h1
                className="pf-c-title pf-m-2xl"
                widget-type="InsightsPageHeaderTitle"
              >
                 
                Test App
                 
              </h1>
            </Title>
          </PageHeaderTitle>
        </section>
      </PageHeader>
    </Applications>
  </Connect(Applications)>
</Provider>
`;

exports[`Applications Render applications with no data 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(Applications)
    match={
      Object {
        "params": Object {
          "id": "testapp",
        },
      }
    }
  >
    <Applications
      getConfig={[Function]}
      getSchema={[Function]}
      match={
        Object {
          "params": Object {
            "id": "testapp",
          },
        }
      }
      saveValues={[Function]}
    >
      <PageHeader>
        <section
          className="pf-l-page-header pf-c-page-header pf-l-page__main-section pf-c-page__main-section pf-m-light"
          widget-type="InsightsPageHeader"
        >
          <PageHeaderTitle
            title="Testapp"
          >
            <Title
              className=""
              headingLevel="h1"
              size="2xl"
              widget-type="InsightsPageHeaderTitle"
            >
              <h1
                className="pf-c-title pf-m-2xl"
                widget-type="InsightsPageHeaderTitle"
              >
                 
                Testapp
                 
              </h1>
            </Title>
          </PageHeaderTitle>
        </section>
      </PageHeader>
    </Applications>
  </Connect(Applications)>
</Provider>
`;
